scrollbar, add online, offline, unknown, alarm, all tabs, add end point, moving, stopped device status

--- a/public/styles.css
+++ b/public/styles.css
@@ -46,3 +46,26 @@ body {
     padding: 10px 30px;
   }
 }
+
+:root {
+  /* --scrollbar-width: 10px; */
+  --scrollbar-track-color: #000;
+  --scrollbar-thumb-color: #888;
+}
+
+::-webkit-scrollbar {
+  width: var(--scrollbar-width);
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--scrollbar-track-color);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar-thumb-color);
+  border-radius: var(--scrollbar-width);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
